@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1066 2012/07/26 21:40:50 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1067 2012/08/04 19:57:41 zmedico Exp $
+
+  04 Aug 2012; Zac Medico <zmedico@gentoo.org> portage-2.1.10.65.ebuild,
+  portage-2.1.11.9.ebuild, portage-2.1.6.7_p1.ebuild,
+  portage-2.2.0_alpha110.ebuild, portage-2.2.0_alpha120.ebuild,
+  portage-9999.ebuild:
+  Add sys-devel/patch to DEPEND for bug #429746.
 
   26 Jul 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.11.8.ebuild,
   -portage-2.2.0_alpha119.ebuild:
